tests/ui/invalid_result_conversion.stderr
error[E0277]: the trait bound `PyErr: From<MyError>` is not satisfied
  --> tests/ui/invalid_result_conversion.rs:21:1
   |
21 | #[pyfunction]
   | ^^^^^^^^^^^^^ the trait `From<MyError>` is not implemented for `PyErr`
   |
   = help: the following other types implement trait `From<T>`:
             <PyErr as From<&CancelledError>>
             <PyErr as From<&IncompleteReadError>>
             <PyErr as From<&InvalidStateError>>
             <PyErr as From<&LimitOverrunError>>
             <PyErr as From<&PanicException>>
             <PyErr as From<&PyArithmeticError>>
             <PyErr as From<&PyAssertionError>>
             <PyErr as From<&PyAttributeError>>
           and $N others
   = note: required for `MyError` to implement `Into<PyErr>`
   = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
